发布版，已经实现了一键登录登出，实现了设置读取功能，解决了许多基础的bug

--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,9 @@
 {
-  "global_headers": {},
-  "unity_login": {
-    "username": "",
-    "password": "",
-    "cookie": ""
-  },
-  "ipgw_cookie_jar": {}
+    "global_headers": {},
+    "unity_login": {
+        "username": "20183602",
+        "password": "m,590718",
+        "cookie": ""
+    },
+    "ipgw_cookie_jar": {}
 }
