使用新的面向对象的思路重新编写界面的类。

--- a/settings.json
+++ b/settings.json
@@ -5,7 +5,7 @@
         "Host": "pass.neu.edu.cn"
     },
     "unity_login": {
-        "username": "20183602",
+        "username": "",
         "password": "",
         "cookie": ""
     },
