增加了install的功能，升级了settings.json，删去了暂时无用的cookie选项。

--- a/settings.json
+++ b/settings.json
@@ -6,8 +6,7 @@
     },
     "unity_login": {
         "username": "",
-        "password": "",
-        "cookie": ""
+        "password": ""
     },
     "ipgw_cookie_jar": {}
 }
