根据不同操作系统决定配置文件路径

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,8 @@ dependencies = [
     "requests",
     'tabulate',
     'beautifulsoup4',
-    'wcwidth'
+    'wcwidth',
+    'platformdirs'
 ]
 dynamic = ["version"]
 
